--- a/themes/raditian-free-hugo-theme-data-science/DESCRIPTION
+++ b/themes/raditian-free-hugo-theme-data-science/DESCRIPTION
@@ -3,7 +3,7 @@ Title: The Raditian Hugo Theme (Data Science Version)
 Version: 0.0.1.9000
 Authors@R: 
      c(
-    person("Matt", "Dancho", email = "mdancho@business-science.io", role = c("aut", "cre"))
+    person("Fatih", "Uenal", email = "mars.fatih@gmail.com", role = c("aut", "cre"))
   )
 Description:
   This package is used with portfoliodown to install the "kross" Data Science Website Theme.
