--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -5,6 +5,7 @@ head:
 showcase:
   enable: true
   title: "Fatih Uenal"
+  subtitle: "Senior Researcher & Data Scientist"
   description: "Senior Researcher at the <a target='_blank' href='https://www.unige.ch/cisa/center/members/uenal-fatih/'>University of Geneva</a>, and Data Scientist with the <a target='_blank' href='https://fossilfueltreaty.org/'>Fossil Fuel Non-Proliferation Treaty Initiative </a>."
   image:
     x: "img/showcase/showcase.png"
@@ -132,7 +133,7 @@ client_and_work:
     - logo:
         x: "img/clients/stand.png"
         _2x: "img/clients/stand@2x.png"
-      alt: "Stand.Earth https://www.linkedin.com/in/fatih-uenal/"
+      alt: "Stand.Earth"
       URL: "https://www.linkedin.com/in/fatih-uenal/"
 
     - logo:
