--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -183,6 +183,28 @@ client_and_work:
         x: "img/works/NLP_Pipeline.jpg"
         _2x: "img/works/NLP_Pipeline.jpg"
       is_even: false
+      
+    - title: "Using AI and Data Science in climate policy research"
+      description: "At the University of Oxford, I present how we use AI and Data Science to accelerate and improve the policy research and advocacy work at the Fossil Fuel Non-Proliferation Treaty Initiative."
+      button:
+        icon: "icon-arrow-right"
+        btnText: "Watch Video"
+        URL: "https://youtu.be/Qjkw1twD2No?t=1"
+      image:
+        x: "img/works/Oxford.png"
+        _2x: "img/works/Oxford.png"
+      is_even: true
+      
+    - title: "Introducing the Fossil Fuel Non-Proliferation Tracker"
+      description: "In this short video, I'll walk you through one of my data science projects which I developed for the Fossil Fuel Non-Proliferation Treaty Initiative (https://fossilfueltreaty.org/). I explain what the goals of the Treaty Initiative are, and, how my project introduced data science and AI to improve the data workflow and public communication of the Initiative. I explain how I programmed a Dashboard with R and trained an Artificial Neural Network for text classification and how these assist the Treaty in their efforts."
+      button:
+        icon: "icon-arrow-right"
+        btnText: "Watch Video"
+        URL: "https://youtu.be/fyJAz2UE92s"
+      image:
+        x: "img/works/tracker-walkthrough.png"
+        _2x: "img/works/tracker-walkthrough.png"
+      is_even: false
 
     
 
