--- a/config.yaml
+++ b/config.yaml
@@ -26,6 +26,7 @@ params:
     - about
     - client-and-work
     - experience
+    - certifications
     - education
     - testimonial
     - contact
