--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -100,6 +100,28 @@ experience:
       duration: "Aug 2020 - Dec 2020"
 
 
+# certifications
+certifications:
+  enable: true
+  title: "Certifications"
+  items:
+    - university: "Google"
+      year: "2023"
+      degree: "Google Cyber Security Professional"
+      
+    - university: "CompTIA Academy"
+      year: "2023"
+      degree: "CompTIA Security+"
+
+    - university: "Harvard University"
+      year: "2021"
+      degree: "Harvard Data Science Professional"
+      
+    - university: "Harvard University"
+      year: "2020"
+      degree: "Harvard Data Science: Machine Learning"
+      
+      
 # education
 education:
   enable: true
