--- a/config.yaml
+++ b/config.yaml
@@ -49,6 +49,9 @@ menu:
     - URL: '#portfolio'
       name: Portfolio
       weight: 3
+    - URL: '#certifications'
+      name: Certifications
+      weight: 4
     - URL: '#contact'
       name: Contact
       weight: 4
