--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -183,7 +183,7 @@ client_and_work:
       button:
         icon: "icon-arrow-right"
         btnText: "Open Juypter Notebook"
-        URL: "https://osf.io/preprints/psyarxiv/65tx4/"
+        URL: "https://colab.research.google.com/drive/1fHdv-q-jNwi8oZONkjoMpz1TwQ_rxfeI#scrollTo=n4oTDmOm71Rs"
       image:
         x: "img/works/xgboost.jpg"
         _2x: "img/works/xgboost.jpg"
