--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -182,7 +182,7 @@ client_and_work:
 
   works:
     - title: "Deep learning vs. XGBoost on network traffic data"
-      description: "I use the [fast.ai](https://www.fast.ai/) deep learning framework for one of its newest applications: classification on tabular data. I compare its performance against the incumbent best tool in the field, gradient boosting with [XGBoost](https://xgboost.readthedocs.io/en/latest/), as well as against various scikit-learn classifiers in detecting network intrusion traffic and classifying common network attack types (e.g., FTP-BruteForce, DOS-GoldenEye, BruteForce-XSS, SQL-Injection, Infiltration, BotAttack). "
+      description: "I use the fast.ai deep learning framework for one of its newest applications: classification on tabular data. I compare its performance against the incumbent best tool in the field, gradient boosting with XGBoost, as well as against various scikit-learn classifiers in detecting network intrusion traffic and classifying common network attack types (e.g., FTP-BruteForce, DOS-GoldenEye, BruteForce-XSS, SQL-Injection, BotAttack). "
       button:
         icon: "icon-arrow-right"
         btnText: "Open Github"
