--- a/config.yaml
+++ b/config.yaml
@@ -38,9 +38,12 @@ menu:
     - URL: '#portfolio'
       name: Portfolio
       weight: 3
+    - URL: '#testimonial'
+      name: Testimonials
+      weight: 4
     - URL: '#contact'
       name: Contact
-      weight: 4
+      weight: 5
   header:
     - URL: '#about'
       name: About
@@ -48,6 +51,9 @@ menu:
     - URL: '#portfolio'
       name: Portfolio
       weight: 3
+    - URL: '#testimonial'
+      name: Testimonials
+      weight: 4
     - URL: '#contact'
       name: Contact
-      weight: 4
+      weight: 5
