--- a/config.yaml
+++ b/config.yaml
@@ -5,12 +5,12 @@ params:
   footer:
     copyright: © Fatih Uenal. All rights reserved.
     site_logo:
-      _2x: img/general/The Brain.png
+      _2x: img/general/logo-png.png
       alt: Design & Code - The Dataist
-      x: img/general/The Brain.png
+      x: img/general/logo-png.png
   googleAnalyticsID: ''
   logo:
-    text1: THE DATAIST
+    text1: dataIQ - AI/ML  
     text2: --------
   plugins:
     css:
