--- a/themes/raditian-free-hugo-theme-data-science/exampleSite/config.toml
+++ b/themes/raditian-free-hugo-theme-data-science/exampleSite/config.toml
@@ -34,11 +34,16 @@ theme = "raditian-free-hugo-theme"
   name = "Portfolio"
   URL = "#portfolio"
   weight = 3
+  
+  [[menu.header]]
+  name = "Testimonials"
+  URL = "#testimonial"
+  weight = 4
 
   [[menu.header]]
   name = "Contact"
   URL = "#contact"
-  weight = 4
+  weight = 5
 
 
   [[menu.footer]]
@@ -50,11 +55,16 @@ theme = "raditian-free-hugo-theme"
   name = "Portfolio"
   URL = "#portfolio"
   weight = 3
+  
+  [[menu.footer]]
+  name = "Testimonials"
+  URL = "#testimonial"
+  weight = 4
 
   [[menu.footer]]
   name = "Contact"
   URL = "#contact"
-  weight = 4
+  weight = 5
 
 
 [params]
