--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -160,8 +160,8 @@ client_and_work:
       alt: "Faculty AI"
       
     - logo:
-        x: "img/clients/sussex.png"
-        _2x: "img/clients/sussex@2x.png"
+        x: "img/clients/Harvard_University_logo.png"
+        _2x: "img/clients/Harvard_University_logo.png"
       alt: "University of Sussex"
       
     - logo:
@@ -171,19 +171,14 @@ client_and_work:
       alt: "Stand.Earth"
 
     - logo:
-        x: "img/clients/ffnpt.png"
-        _2x: "img/clients/ffnpt@2x.png"
+        x: "img/clients/Primary_fullcolour_for+light+bgFFT.png"
+        _2x: "img/clients/Primary_fullcolour_for+light+bgFFT.png"
       alt: "Fossil Fuel Non-Proliferation Treaty Initiative"
 
     - logo:
-        x: "img/clients/TWN.png"
-        _2x: "img/clients/TWN@2x.png"
+        x: "img/clients/2560px-Uni_GE_logo.svg.png"
+        _2x: "img/clients/2560px-Uni_GE_logo.svg.png"
       alt: "Third World Network"
-      
-    # - logo:
-    #     x: "img/clients/2560px-Uni_GE_logo.svg.png"
-    #     _2x: "img/clients/2560px-Uni_GE_logo.svg.png"
-    #   alt: "University of Sussex"
 
   works:
     
@@ -194,8 +189,8 @@ client_and_work:
         btnText: "Launch Application"
         URL: "https://mmm-demo-hqbtfk5ikq-oa.a.run.app"
       image:
-        x: "img/works/mmm-demo.png"
-        _2x: "img/works/mmm-demo.png"
+        x: "img/works/mmm_demo.png"
+        _2x: "img/works/mmm_demo.png"
         is_even: false
     
     - title: "Deep learning vs. XGBoost on network traffic data"
